--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,16 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+@theme {
+  --color-primary-btn: #00afe3;
+  --color-secondary-btn: #aac9d2;
+  --color-outline-btn: #b3b3b3;
+  --color-secondary-bg: #e3f6fc;
+  --color-secondary-text: #828282;
+  --color-danger: #f74b00;
+  --color-disable-btn: #d9d9d9;
+  --color-border: #dedede;
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-poppins), sans-serif;
 }
